# otlp2parquet

./: .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  AGENTS.md  ARCHITECTURE_REVIEW.md  AUDIT_STATUS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.lambda  LICENSE  Makefile  OPENDAL_PHASE2_PLAN.md  OPENDAL_VALIDATION_RESULTS.md  PERFORMANCE_AUDIT.md  PERF_AUDIT_SUMMARY.md  README.md  SCHEMA_ISSUE.md  TASK_11_TEST_PLAN.md  WORKERS_SMOKE_TEST_SETUP.md  cloudformation.yaml  config.example.env  config.example.toml  docker-compose.yml  findings-patch1.json  findings-patch2.json  findings-patch3.json  findings-patch4.json  findings.json  index.html  mkdocs.yml  sitemap.xml  template.yaml  wrangler.toml
.cargo/: config.toml
crates/otlp2parquet/: Cargo.toml
crates/otlp2parquet-batch/: Cargo.toml
crates/otlp2parquet-batch/src/: buffered_batch.rs  lib.rs  preview.rs
crates/otlp2parquet-batch/src/batch/: buffered_batch.rs  mod.rs
crates/otlp2parquet-cloudflare/: .env.example  .gitignore  Cargo.toml  oldwranger.toml  package-lock.json  wrangler.ci.toml  wrangler.template.toml  wrangler.toml
crates/otlp2parquet-cloudflare/src/: auth.rs  batched.rs  batcher.rs  catalog_worker.rs  do_config.rs  errors.rs  handlers.rs  lib.rs  parquet.rs  request.rs  tracing_context.rs
crates/otlp2parquet-cloudflare/src/do/: config.rs  dlq.rs  flush.rs  mod.rs  receipts.rs  storage.rs  types.rs
crates/otlp2parquet-cloudflare/src/ingest/: handlers.rs  mod.rs  routing.rs
crates/otlp2parquet-common/: Cargo.toml
crates/otlp2parquet-common/src/: input_format.rs  lib.rs  types.rs
crates/otlp2parquet-common/src/config/: mod.rs  sources.rs
crates/otlp2parquet-common/src/otlp_json/: json_normalizer.rs  mod.rs
crates/otlp2parquet-config/: Cargo.toml
crates/otlp2parquet-config/src/: env_overrides.rs  lib.rs  platform.rs  sources.rs  validation.rs
crates/otlp2parquet-core/: Cargo.toml
crates/otlp2parquet-core/src/: iceberg_schemas.rs  lib.rs  schema.rs  storage.rs  types.rs
crates/otlp2parquet-core/src/batch/: buffered_batch.rs  ipc.rs  mod.rs
crates/otlp2parquet-core/src/config/: env_overrides.rs  mod.rs  validation.rs
crates/otlp2parquet-core/src/otlp/: any_value_builder.rs  field_names.rs  field_numbers.rs  format.rs  json_normalizer.rs  mod.rs  to_arrow.rs
crates/otlp2parquet-core/src/otlp/common/: any_value_builder.rs  builder_helpers.rs  field_names.rs  format.rs  json_normalizer.rs  json_writer.rs  mod.rs
crates/otlp2parquet-core/src/otlp/logs/: format.rs  mod.rs  to_arrow.rs
crates/otlp2parquet-core/src/otlp/metrics/: mod.rs  to_arrow.rs
crates/otlp2parquet-core/src/parquet/: encoding.rs  mod.rs  writer.rs
crates/otlp2parquet-core/src/schema/: helpers.rs  logs.rs  metrics.rs  mod.rs  traces.rs
crates/otlp2parquet-core/tests/: integration_test.rs  json_format_test.rs  testdata_end_to_end.rs
crates/otlp2parquet-handlers/: Cargo.toml
crates/otlp2parquet-handlers/src/: codec.rs  error.rs  lib.rs  processor.rs
crates/otlp2parquet-iceberg/: Cargo.toml  README.md
crates/otlp2parquet-iceberg/src/: arrow_convert.rs  aws.rs  catalog.rs  datafile_convert.rs  http.rs  http_native.rs  http_wasm.rs  init.rs  lib.rs  manifest.rs  partition.rs  path.rs  schema.rs  validation.rs  writer.rs  writer_test.rs
crates/otlp2parquet-iceberg/src/protocol/: mod.rs  requests.rs  responses.rs
crates/otlp2parquet-iceberg/src/types/: datafile.rs  mod.rs  schema.rs  table.rs
crates/otlp2parquet-lambda/: .gitignore  Cargo.toml  Makefile  build.rs  local-env.json.example  local-env.plain-parquet.json  samconfig.toml  template.yaml
crates/otlp2parquet-lambda/src/: handlers.rs  lib.rs  main.rs  response.rs
crates/otlp2parquet-lambda/test-events/: README.md  logs-json.json  logs-jsonl.json  logs-protobuf.json  metrics-exponential-histogram-protobuf.json  metrics-gauge-protobuf.json  metrics-histogram-protobuf.json  metrics-sum-protobuf.json  metrics-summary-protobuf.json  traces-protobuf.json
crates/otlp2parquet-proto/: Cargo.toml  build.rs
crates/otlp2parquet-proto/src/: lib.rs
crates/otlp2parquet-runtime/: Cargo.toml
crates/otlp2parquet-runtime/src/: batcher.rs  cloudflare.rs  lambda.rs  lib.rs  opendal_storage.rs  partition.rs  server.rs  standalone.rs
crates/otlp2parquet-server/: Cargo.toml
crates/otlp2parquet-server/src/: handlers.rs  init.rs  lib.rs  main.rs
crates/otlp2parquet-server/src/deploy/: aws.rs  cloudflare.rs  mod.rs
crates/otlp2parquet-server/templates/: cloudformation.yaml  wrangler.toml
crates/otlp2parquet-storage/: Cargo.toml
crates/otlp2parquet-storage/src/: lib.rs  opendal_storage.rs  parquet_writer.rs  partition.rs
crates/otlp2parquet-storage/src/iceberg/: arrow_convert.rs  catalog.rs  catalog.rs.bak  catalog.rs.bak3  catalog.rs.bak4  datafile_convert.rs  http.rs  init.rs  manifest.rs  mod.rs  mod.rs.bak  mod.rs.bak2  validation.rs  writer.rs  writer_test.rs
crates/otlp2parquet-writer/: Cargo.toml
crates/otlp2parquet-writer/src/: catalog.rs  encoding.rs  error.rs  init.rs  lib.rs  partition.rs  platform.rs  storage.rs  table_mapping.rs  write.rs  writer.rs
crates/otlp2parquet/benches/: decode_otlp.rs  transform_arrow.rs
crates/otlp2parquet/src/: handlers.rs  init.rs  lib.rs  main.rs
crates/otlp2parquet/src/batch/: mod.rs
crates/otlp2parquet/src/connect/: mod.rs  url.rs
crates/otlp2parquet/src/deploy/: aws.rs  cloudflare.rs  names.rs
crates/otlp2parquet/src/writer/: mod.rs  storage.rs  write.rs
crates/otlp2parquet/templates/: cloudformation.yaml  wrangler.toml
crates/otlp2parquet/tests/: cli_integration_test.rs  e2e.rs  smoke.rs
crates/otlp2parquet/tests/harness/: lambda.rs  mod.rs  server.rs  workers.rs
crates/quill-core/: Cargo.toml
crates/quill-core/src/: lib.rs
crates/quill-core/src/otlp/: mod.rs
crates/quill-core/src/parquet/: mod.rs  partition.rs  writer.rs
crates/quill-runtime/: Cargo.toml
crates/quill-runtime/src/: cloudflare.rs  lambda.rs  lib.rs  standalone.rs
examples/generate-parquet-testdata/: Cargo.toml
examples/generate-parquet-testdata/src/: main.rs
(+1816 files in other folders)
