[workspace]
members = [
    "crates/otlp2parquet",
    "crates/otlp2parquet-common",
    "crates/otlp2parquet-writer",
    "crates/otlp2parquet-proto",
    "crates/otlp2parquet-cloudflare",
    "crates/otlp2parquet-lambda",
    "crates/otlp2parquet-handlers",
]
exclude = ["examples/generate-parquet-testdata"]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2021"
authors = ["otlp2parquet Contributors"]
license = "Apache-2.0"
repository = "https://github.com/smithclay/otlp2parquet"
description = "Stream OpenTelemetry logs, metrics, and traces to Parquet files"

[profile.release]
opt-level = "z"           # Optimize for size
lto = true                # Link-time optimization
codegen-units = 1         # Better optimization
strip = true              # Strip symbols
panic = "abort"           # Smaller panic handler

[profile.release.package."*"]
opt-level = "z"

[profile.release.package.otlp2parquet-cloudflare]
opt-level = "z"

[profile.release.package.otlp2parquet-lambda]
opt-level = 3

[profile.release.package.otlp2parquet]
opt-level = 3

[workspace.dependencies]
# Internal crates - all use workspace version
otlp2parquet-proto = { version = "0.6.0", path = "crates/otlp2parquet-proto" }
otlp2parquet-common = { version = "0.6.0", path = "crates/otlp2parquet-common" }
otlp2parquet-writer = { version = "0.6.0", path = "crates/otlp2parquet-writer" }
otlp2records = { git = "https://github.com/smithclay/otlp2records", rev = "66e88fdc006acb63fe57b600f2ff25a3c841dea7", default-features = false }

# Arrow/Parquet - MINIMAL features only
# Version pinned to 54 to match otlp2records dependency
arrow = { version = "54", default-features = false, features = ["ipc"] }
parquet = { version = "54", default-features = false, features = ["snap", "arrow", "async"] }

# OTLP Protocol - minimal
prost = { version = "0.14", default-features = false, features = ["std"] }

# Core utilities - minimal, no tokio (platforms provide their own runtimes)
serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
anyhow = "1"
thiserror = "2.0"
chrono = { version = "0.4", default-features = false, features = ["std"] }
tokio = { version = "1", default-features = false, features = ["rt", "macros"] }
once_cell = "1.19"
hex = "0.4"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi"] }

# AWS SigV4 for S3 Tables authentication
aws-sigv4 = { version = "1.3.6", default-features = false, features = ["sign-http"] }
aws-credential-types = { version = "1.2", default-features = false }
aws-config = { version = "1.8", default-features = false, features = ["rustls", "behavior-version-latest", "rt-tokio"] }

# Build dependencies
prost-build = "0.14"
