[package]
name = "otlp2parquet"
description = "Stream OpenTelemetry logs, metrics, and traces to Parquet files"
readme = "README.md"
keywords = ["opentelemetry", "otlp", "parquet", "observability", "telemetry"]
categories = ["command-line-utilities", "database"]
version = "0.8.0"
edition = "2021"
authors = ["otlp2parquet Contributors"]
license = "Apache-2.0"
repository = "https://github.com/smithclay/otlp2parquet"

[[bin]]
name = "otlp2parquet"
path = "src/main.rs"

[dependencies]
otlp2records = { version = "0.2.2", default-features = false, features = ["parquet"] }

arrow = { version = "54", default-features = false, features = ["ipc"] }

serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false, features = ["std"] }
toml = { version = "0.8", default-features = false, features = ["parse"] }
anyhow = "1"
thiserror = "2.0"
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "net", "macros", "signal"] }
once_cell = "1.19"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "json"] }

parking_lot = "0.12"

axum = { version = "0.8.8", default-features = false, features = ["tokio", "http1", "http2", "json"] }
tower-http = { version = "0.6", default-features = false, features = ["trace", "decompression-gzip"] }

time = { version = "0.3", default-features = false, features = ["std"] }
uuid = { version = "1", default-features = false, features = ["v4"] }
metrics = { version = "0.24", default-features = false }
clap = { version = "4.5", default-features = false, features = ["std", "derive", "help", "usage", "error-context"] }
opendal = { version = "0.55", default-features = false, features = ["blocking", "services-fs", "services-s3"] }

[dev-dependencies]
tempfile = "3.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", default-features = false, features = ["process"] }
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", default-features = false, features = ["derive"] }
paste = "1.0"

[features]
default = []
docker-tests = []
smoke-server = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = "z"

[profile.release.package.otlp2parquet]
opt-level = 3
