[package]
name = "otlp2parquet-batch"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
otlp2records = { workspace = true }
parking_lot = "0.12"

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
bytes = { version = "1", default-features = false }
