[package]
name = "otlp2parquet-cloudflare"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
otlp2parquet-core = { path = "../otlp2parquet-core" }
otlp2parquet-batch = { path = "../otlp2parquet-batch" }
otlp2parquet-config = { path = "../otlp2parquet-config" }
otlp2parquet-writer = { path = "../otlp2parquet-writer" }
otlp2parquet-handlers = { path = "../otlp2parquet-handlers", default-features = false }

# Cloudflare Workers runtime
worker = "0.7"
wasm-bindgen = "0.2"

# Utilities
once_cell = "1.19"
serde = { workspace = true }
serde_json = { workspace = true }
arrow = { workspace = true }
base64 = "0.22"
