[package]
name = "otlp2parquet-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = { workspace = true }
arrow = { workspace = true }
chrono = { workspace = true }
hex = { workspace = true }
otlp2records = { workspace = true }
parquet = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
