[package]
name = "otlp2parquet-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Arrow for data structures only (no Parquet serialization)
arrow = { workspace = true }
parquet = { workspace = true, features = ["arrow"] }

# Iceberg schemas
icepick = { git = "https://github.com/smithclay/icepick.git", rev = "5cad5a99b56fee03ad80dc3725ce4259760ed03d", default-features = false }

# OTLP Protocol
otlp2parquet-proto = { path = "../otlp2parquet-proto" }
prost = { workspace = true }

# Utilities - pure, no async, no I/O
anyhow = { workspace = true }
thiserror = "1"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }  # For JSON/JSONL format support
hex = { workspace = true }
base64 = { workspace = true }      # For base64-encoded trace/span IDs
blake3 = { workspace = true }      # For content hashing

[dev-dependencies]
# For testing Parquet output
parquet = { workspace = true, features = ["arrow"] }
tokio = { workspace = true, features = ["rt", "macros"] }
