[package]
name = "otlp2parquet-core"
description = "Core OTLP to Arrow/Parquet conversion logic"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "getrandom/js"]

[dependencies]
# Arrow for data structures only (no Parquet serialization)
arrow = { workspace = true }
parquet = { workspace = true, features = ["arrow"] }

# OTLP Protocol
otlp2parquet-proto = { workspace = true }
prost = { workspace = true }

# Utilities - pure, no async, no I/O
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }  # For JSON/JSONL format support
hex = { workspace = true }
base64 = { workspace = true }      # For base64-encoded trace/span IDs
blake3 = { workspace = true }      # For content hashing

# Batching dependencies
parking_lot = "0.12"

# Config dependencies
toml = { workspace = true }
tracing = { workspace = true }

# WASM bindings (optional)
wasm-bindgen = { version = "0.2", optional = true }
getrandom = { version = "0.2", optional = true }

[target.'cfg(target_family = "wasm")'.dependencies]
js-sys = "0.3"

[dev-dependencies]
# For testing Parquet output
parquet = { workspace = true, features = ["arrow"] }
tokio = { workspace = true, features = ["rt", "macros"] }
