[package]
name = "otlp2parquet-handlers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
otlp2parquet-batch = { workspace = true }
otlp2parquet-common = { workspace = true }
otlp2records = { workspace = true }
otlp2parquet-writer = { path = "../otlp2parquet-writer", default-features = false }
serde_json = { workspace = true }
vrl = { version = "0.29", default-features = false, features = ["value"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
bytes = { version = "1", default-features = false }
ordered-float = "4"
