[package]
name = "otlp2parquet-handlers"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
arrow = { version = "57", default-features = false }
otlp2parquet-core = { path = "../otlp2parquet-core", default-features = false }
otlp2parquet-writer = { path = "../otlp2parquet-writer", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
