[package]
name = "otlp2parquet-iceberg"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Internal dependencies
otlp2parquet-storage = { path = "../otlp2parquet-storage" }

# Utilities
anyhow = { workspace = true }
async-trait = "0.1"
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = "0.11"
tracing = { version = "0.1", default-features = false, features = ["std"] }

# Parquet metadata access
parquet = { workspace = true, features = ["arrow"] }

# Arrow for schema conversion
arrow = { workspace = true }

# Native-only dependencies (Lambda + Server)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
aws-sigv4 = "1.2"
aws-credential-types = "1.2"
url = "2.5"
tokio = { workspace = true }

# WASM-only dependencies (Workers)
[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
