[package]
name = "otlp2parquet-iceberg"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = "0.11"
arrow = { workspace = true }
parquet = { workspace = true, features = ["arrow"] }
opendal = { version = "0.54", default-features = false }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { version = "1.0", features = ["v4"] }
blake3 = { workspace = true }
url = "2.5"
apache-avro = "0.18"
otlp2parquet-core = { path = "../otlp2parquet-core" }

# AWS dependencies (optional, feature-gated)
aws-config = { workspace = true, optional = true }
aws-credential-types = { workspace = true, optional = true }
aws-sigv4 = { workspace = true, optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures-util = "0.3"
urlencoding = "2.1"
tokio = { version = "1", features = ["macros"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
opendal = { version = "0.54", default-features = false, features = ["services-memory", "services-fs"] }

[features]
default = []
aws-sigv4 = ["dep:aws-config", "dep:aws-credential-types", "dep:aws-sigv4"]
