[package]
name = "otlp2parquet-lambda"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
otlp2parquet-core = { path = "../otlp2parquet-core" }
otlp2parquet-writer = { path = "../otlp2parquet-writer" }
otlp2parquet-handlers = { path = "../otlp2parquet-handlers" }
arrow = { workspace = true }
opendal = { version = "0.54", default-features = false, features = ["services-s3"] }

# AWS Lambda runtime (provides tokio runtime)
lambda_runtime = "1.0"
aws_lambda_events = "0.18"
tokio = { workspace = true, features = ["macros"] }

# Utilities
base64 = "0.22"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
flate2 = "1.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
chrono = { version = "0.4", features = ["clock"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
