[package]
name = "otlp2parquet-lambda"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false

[dependencies]
otlp2parquet-common = { path = "../otlp2parquet-common" }
otlp2parquet-writer = { path = "../otlp2parquet-writer" }
otlp2parquet-handlers = { path = "../otlp2parquet-handlers" }
opendal = { version = "0.54", default-features = false, features = ["services-s3"] }

# AWS Lambda runtime (provides tokio runtime)
lambda_runtime = "1.0"
aws_lambda_events = "1.0"
tokio = { workspace = true, features = ["macros"] }

# Utilities
base64 = "0.22"
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
flate2 = "1.1"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[build-dependencies]
chrono = { version = "0.4", features = ["clock"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
