[package]
name = "otlp2parquet-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }  # For JSON support via generated derives

[build-dependencies]
prost-build = { workspace = true }
