[package]
name = "otlp2parquet-proto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
prost = { workspace = true }
prost-types = { version = "0.13", default-features = false }
serde = { workspace = true }  # For JSON support via generated derives

[build-dependencies]
prost-build = "0.13"
