[package]
name = "otlp2parquet-proto"
description = "OTLP protobuf definitions for otlp2parquet"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
prost = { workspace = true }
prost-types = { version = "0.14", default-features = false }
serde = { version = "1", default-features = false, features = ["derive", "std"] }  # For JSON support via generated derives

[build-dependencies]
prost-build = "0.14"
