[package]
name = "otlp2parquet-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
otlp2parquet-core = { path = "../otlp2parquet-core" }
otlp2parquet-proto = { path = "../otlp2parquet-proto" }

# Platform-specific (optional)
worker = { workspace = true, optional = true }
lambda_runtime = { workspace = true, optional = true }
aws_lambda_events = { workspace = true, optional = true }
tonic = { workspace = true, optional = true }

# OpenDAL - unified storage
opendal = { workspace = true, optional = true }

# Core utilities
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { version = "0.22", optional = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Async runtime (used by standalone with OpenDAL)
tokio = { workspace = true, optional = true, features = ["rt-multi-thread", "net", "io-util", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[features]
default = []
cloudflare = ["worker", "services-s3"]
lambda = ["lambda_runtime", "aws_lambda_events", "services-s3", "base64"]
grpc = ["tonic", "lambda"]
standalone = ["services-fs"]

# Internal feature flags for conditional compilation
services-s3 = ["opendal", "opendal/services-s3"]
services-fs = ["opendal", "opendal/services-fs", "tokio"]

# OpenDAL testing features (will be merged into main features)
opendal-s3 = ["services-s3"]
opendal-fs = ["services-fs"]
opendal-lambda = ["lambda_runtime", "aws_lambda_events", "services-s3", "base64"]
opendal-standalone = ["services-fs", "tokio"]
