[package]
name = "otlp2parquet-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
otlp2parquet-core = { path = "../otlp2parquet-core" }
otlp2parquet-proto = { path = "../otlp2parquet-proto" }

# OpenDAL - unified storage abstraction
opendal = { workspace = true }
parquet = { workspace = true }

# Core utilities
anyhow = { workspace = true }
chrono = { workspace = true }
blake3 = { workspace = true }
parking_lot = { workspace = true }
prost = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
parquet = { workspace = true, features = ["arrow", "snap"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
parquet = { workspace = true, features = ["arrow", "snap", "zstd"] }
# Async utilities for OpenDAL list operations (native only)
futures-util = "0.3"
# Tokio needed for filesystem backend
tokio = { workspace = true, optional = true, features = ["rt", "macros"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }

[features]
default = []
# Feature flags for different storage backends
services-s3 = ["opendal/services-s3"]
services-fs = ["opendal/services-fs", "tokio"]
