[package]
name = "otlp2parquet-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
otlp2parquet-core = { path = "../otlp2parquet-core" }
otlp2parquet-batch = { path = "../otlp2parquet-batch" }
otlp2parquet-config = { path = "../otlp2parquet-config" }
otlp2parquet-writer = { path = "../otlp2parquet-writer" }
arrow = { workspace = true }
parquet = { workspace = true }
prost = { workspace = true }
icepick = { git = "https://github.com/smithclay/icepick.git", rev = "388286c31ebd8d9d8707dfb18fe0991541457ebd", default-features = false }
opendal = { version = "0.54", default-features = false, features = ["services-fs", "services-s3"] }
chrono = { workspace = true }

# HTTP server
axum = { version = "0.7", default-features = false, features = ["tokio", "http1", "http2", "json"] }
tower = { version = "0.4", default-features = false }
tower-http = { version = "0.5", default-features = false, features = ["trace"] }

# Async runtime
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros", "signal"] }

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt", "json"] }

# Utilities
anyhow = { workspace = true }
serde_json = { workspace = true }
metrics = { version = "0.21", default-features = false }
